--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
     <button id="testBtn">Test Connection</button>
     <div id="result">Press the button to check.</div>
 
-    <script src="test.js"></script>
+    <script type="module" src="./js/main.js"></script>
+    <script src="./test.js"></script>
+
   </body>
 </html>
