--- a/index.html
+++ b/index.html
@@ -19,12 +19,24 @@
     </style>
   </head>
   <body>
-    <h1>WHSScienceMC Backend Connection Test</h1>
-    <button id="testBtn">Test Connection</button>
-    <div id="result">Press the button to check.</div>
-
+    <div id="login-screen">
+      <h1>WHSScienceMC</h1>
+      <p>Please sign in with your @education.nsw.gov.au Google account.</p>
+      <button id="loginBtn">Sign In with Google</button>
+      <div id="login-status"></div>
+    </div>
+  
+    <div id="app-screen" style="display:none;">
+      <h2>Welcome, <span id="user-name"></span></h2>
+      <button id="logoutBtn">Sign Out</button>
+  
+      <div id="quiz-area">
+        <p>This is the main app content (hidden until login).</p>
+        <button id="writeBtn">Test Firestore Write</button>
+      </div>
+    </div>
+  
     <script type="module" src="./js/main.js"></script>
-    <script src="./test.js"></script>
-
   </body>
+
 </html>
