--- a/index.html
+++ b/index.html
@@ -48,8 +48,7 @@
     <button id="logoutBtn">Sign Out</button>
 
     <div id="quiz-area">
-      <p>This is the main app content (hidden until login).</p>
-      <button id="writeBtn">Test Firestore Write</button>
+      <p>This is the main app content.</p>
       <!-- NEW: start quiz button -->
       <button id="startQuizBtn">Start Quiz</button>
     </div>
