--- a/questions/q2.html
+++ b/questions/q2.html
@@ -14,7 +14,8 @@
 
         <!-- 1. Info div (user info) -->
         <div class="info-bar">
-            <span class="label">Logged in as:</span> Placeholder Student Name
+            <span class="label">Logged in as:</span>
+            <span id="loggedInUser">loading</span>
         </div>
 
         <!-- 3. Reword div (same position as q1) -->
