--- a/questions/q1.html
+++ b/questions/q1.html
@@ -14,8 +14,10 @@
 
         <!-- 1. Info div (user info) -->
         <div class="info-bar">
-            <span class="label">Logged in as:</span> Placeholder Student Name
+            <span class="label">Logged in as:</span>
+            <span id="loggedInUser">loading</span>
         </div>
+
 
         <!-- 3. Reword div -->
         <div class="reword-block">
